--- a/dev/blocks/page/page.scss
+++ b/dev/blocks/page/page.scss
@@ -21,4 +21,36 @@
 		flex: 0 0 auto;
 		width: 100%;
 	}
+	&__nav {
+		background: #000;
+		height: 100%;
+		left: 0;
+		position: fixed;
+		top: 0;
+		width: 0;
+		z-index: 5;
+		@media (min-width: $screen-md) {
+			display: none;
+		}
+	}
+	&__darker {
+		background: #000;
+		display: block;
+		height: 100%;
+		left: 0;
+		opacity: 0;
+		position: fixed;
+		top: 0;
+		transition: all .25s;
+		visibility: hidden;
+		width: 100%;
+		z-index: 3;
+		.nav-open & {
+			opacity: .16;
+			visibility: visible;
+		}
+		@media (min-width: $screen-md) {
+			display: none;
+		}
+	}
 }
