--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -1,6 +1,9 @@
 //-
   ВНИМАНИЕ! Этот файл генерируется автоматически.
 
+include ../blocks/checkbox/checkbox.pug
+include ../blocks/drag-drop/drag-drop.pug
+include ../blocks/field/field.pug
 include ../blocks/footer-links/footer-links.pug
 include ../blocks/footer-unit/footer-unit.pug
 include ../blocks/header/header.pug
