--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -11,18 +11,26 @@
 @import "dev/scss/fonts.scss";
 @import "dev/blocks/breadcrumbs/breadcrumbs.scss";
 @import "dev/blocks/button/button.scss";
+@import "dev/blocks/checkbox/checkbox.scss";
+@import "dev/blocks/drag-drop/drag-drop.scss";
+@import "dev/blocks/field/field.scss";
 @import "dev/blocks/footer/footer.scss";
 @import "dev/blocks/footer-contacts/footer-contacts.scss";
 @import "dev/blocks/footer-grid/footer-grid.scss";
 @import "dev/blocks/footer-links/footer-links.scss";
 @import "dev/blocks/footer-unit/footer-unit.scss";
+@import "dev/blocks/form/form.scss";
 @import "dev/blocks/grid/grid.scss";
 @import "dev/blocks/header/header.scss";
+@import "dev/blocks/input/input.scss";
 @import "dev/blocks/nav/nav.scss";
 @import "dev/blocks/page/page.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
+@import "dev/blocks/popup/popup.scss";
+@import "dev/blocks/select/select.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
 @import "dev/blocks/subnav/subnav.scss";
+@import "dev/blocks/textarea/textarea.scss";
 
 /*!*
  * ВНИМАНИЕ! Этот файл генерируется автоматически.
