--- a/dev/blocks/phone-drop/phone-drop.scss
+++ b/dev/blocks/phone-drop/phone-drop.scss
@@ -49,6 +49,7 @@
 		line-height: 100%;
 		text-decoration: none;
 		transition: color .25s ease;
+		user-select: none;
 	}
 	&_open &__link {
 		color: #295694;
