--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -15,7 +15,7 @@ html(class='no-js', lang='ru-RU')
 		meta(name='format-detection', content='email=no')
 		meta(name='google', content='notranslate')
 		meta(name='HandheldFriendly' content='true')
-		meta(name='robots', content='noindex, nofollow')
+		meta(name='robots', content='index, follow')
 		meta(name='theme-color', content='#4671a2')
 
 		meta(property='og:type', content='website')
@@ -67,7 +67,7 @@ html(class='no-js', lang='ru-RU')
 				block pageHeader
 			.page__main
 				block pageMain
-					.fake-content
+					.fake-content fake-content
 			.page__footer
 				include layout__part_footer.pug
 			.page__darker
