--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -32,7 +32,7 @@ mixin header(title, isSub, sub)
 							+nav
 						.header__drop
 							+phone-drop
-						a.header__button.button(href='#') Написать нам
+						a.header__button.button.js-popup(href='#popup-call') Написать нам
 			.grid__row
 				.grid__col
 					.header__block
