--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -72,6 +72,10 @@ html(class='no-js', lang='ru-RU')
 				include layout__part_footer.pug
 			.page__darker
 	script(src='/js/main.js')
+	block templates
+
+	+popup-call
+
 	block scripts
 
 	//удалить
