--- a/dev/pug/layout_service.pug
+++ b/dev/pug/layout_service.pug
@@ -33,6 +33,7 @@ html(class='no-js', lang='ru-RU')
 				block pageMain
 					.fake-content fake-content
 	script(src='/js/main.js')
+	block templates
 	block scripts
 
 	//удалить
