--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -9,4 +9,5 @@ include ../blocks/footer-unit/footer-unit.pug
 include ../blocks/header/header.pug
 include ../blocks/nav/nav.pug
 include ../blocks/phone-drop/phone-drop.pug
+include ../blocks/popup/popup.pug
 include ../blocks/subnav/subnav.pug
