--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -6,6 +6,7 @@
 @import "normalize.css/normalize.css";
 @import "dev/scss/variables.scss";
 @import "dev/scss/mixins.scss";
+@import "dev/scss/vendor.scss";
 @import "dev/scss/typography.scss";
 @import "dev/scss/reboot.scss";
 @import "dev/scss/fonts.scss";
