--- a/dev/scss/variables.scss
+++ b/dev/scss/variables.scss
@@ -4,6 +4,7 @@ $color-white:                   #ffffff !default;
 $typography-primary:            rgba(#1a171a, .7) !default;
 $typography-heading:            #1a171a !default;
 $typography-inverse:            #ffffff !default;
+$typography-error: 				#d34254 !default;
 
 $body-bg:                       #f8fafd !default;
 $body-color:                    $typography-primary !default;
