--- a/dev/blocks/form/form.scss
+++ b/dev/blocks/form/form.scss
@@ -34,6 +34,10 @@
 			grid-area: comment;
 		}
 	}
+	&__error {
+		color: $typography-error;
+		display: none;
+	}
 	&__button {
 		@media (min-width: $screen-md) {
 			padding: 19px 16px;
