--- a/dev/blocks/nav/nav.scss
+++ b/dev/blocks/nav/nav.scss
@@ -19,6 +19,10 @@
 			margin-left: 26px;
 		}
 	}
+	.header_transparent &__item {
+		color: #323441;
+	}
+
 	&_sidenav &__item {
 		margin-left: 0;
 	}
