--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -1,7 +1,7 @@
 //- Все примеси в этом файле должны начинаться c имени блока (header)
 
 mixin header(title, isSub, sub)
-	.header
+	.header(class=isMainPage ? 'header_transparent': '')
 		.grid
 			.grid__row
 				.grid__col
