--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -10,8 +10,10 @@
 @import "dev/scss/typography.scss";
 @import "dev/scss/reboot.scss";
 @import "dev/scss/fonts.scss";
+@import "dev/blocks/breadcrumbs/breadcrumbs.scss";
 @import "dev/blocks/button/button.scss";
 @import "dev/blocks/checkbox/checkbox.scss";
+@import "dev/blocks/drag-drop/drag-drop.scss";
 @import "dev/blocks/field/field.scss";
 @import "dev/blocks/footer/footer.scss";
 @import "dev/blocks/footer-contacts/footer-contacts.scss";
@@ -28,6 +30,7 @@
 @import "dev/blocks/popup/popup.scss";
 @import "dev/blocks/select/select.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
+@import "dev/blocks/subnav/subnav.scss";
 @import "dev/blocks/textarea/textarea.scss";
 
 /*!*
