--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -4,3 +4,28 @@ block pageHeader
 	+header('Продукция', false)
 
 block pageMain
+	.grid
+		.grid__row
+			.grid__col
+				+prod-tiles(
+					[
+						{
+							class: 'calf',
+							title: 'Корма для выращивания телят',
+							isDescr: true,
+							descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление'
+						},
+						{
+							class: 'cow',
+							title: 'Корма для здоровья коров',
+							isDescr: true,
+							descr: 'Характерной особенностью кормления молочных голштинских коров является высокая обеспеченность рационов концентрированными кормами'
+						},
+						{
+							class: 'milk',
+							title: 'Для повышения удоев',
+							isDescr: true,
+							descr: 'Для хорошей продуктивности в рационе надлежит добавлять минералы, микроэлементы, витамины'
+						}
+					]
+				)
