--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -10,4 +10,5 @@ include ../blocks/header/header.pug
 include ../blocks/nav/nav.pug
 include ../blocks/phone-drop/phone-drop.pug
 include ../blocks/popup/popup.pug
+include ../blocks/prod-tiles/prod-tiles.pug
 include ../blocks/subnav/subnav.pug
