--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -28,6 +28,7 @@
 @import "dev/blocks/page/page.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
 @import "dev/blocks/popup/popup.scss";
+@import "dev/blocks/prod-tiles/prod-tiles.scss";
 @import "dev/blocks/select/select.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
 @import "dev/blocks/subnav/subnav.scss";
