--- a/dev/pages/production-list.pug
+++ b/dev/pages/production-list.pug
@@ -14,3 +14,33 @@ block pageHeader
 	)
 
 block pageMain
+	.grid
+		.grid__row
+			.grid__col
+				+back()
+				h2.page__title.page__title_1 Корма для выращивания телят
+				p.page__p Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление.
+				+prod-grid(
+					[
+						{
+							title: 'Диарвит',
+							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+						},
+						{
+							title: 'Хелпмилк',
+							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+						},
+						{
+							title: 'Престартер',
+							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+						},
+						{
+							title: 'БМВЛ для телят АСТ/105',
+							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+						},
+						{
+							title: 'БМВЛ для телят АСТ/106',
+							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+						},
+					]
+				)
