--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -1,6 +1,7 @@
 //-
   ВНИМАНИЕ! Этот файл генерируется автоматически.
 
+include ../blocks/back/back.pug
 include ../blocks/checkbox/checkbox.pug
 include ../blocks/drag-drop/drag-drop.pug
 include ../blocks/field/field.pug
@@ -10,5 +11,6 @@ include ../blocks/header/header.pug
 include ../blocks/nav/nav.pug
 include ../blocks/phone-drop/phone-drop.pug
 include ../blocks/popup/popup.pug
+include ../blocks/prod-grid/prod-grid.pug
 include ../blocks/prod-tiles/prod-tiles.pug
 include ../blocks/subnav/subnav.pug
