--- a/dev/blocks/popup/popup.pug
+++ b/dev/blocks/popup/popup.pug
@@ -56,7 +56,7 @@ mixin popup-price()
 			.popup__title Узнать цену
 			.popup__descr Вы можете заказать звонок на Ваш телефон через данную форму. Укажите в соответствующих полях Ваши контактные данные и наш сотрудник перезвонит Вам.
 			.popup__product
-				.popup__product-image
+				.popup__product-img
 					img(src='/assets/popup-good.png' alt='')
 				.popup__product-inner
 					.popup__product-title БМВЛ для телят АСТ/105
