--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -29,7 +29,10 @@
 @import "dev/blocks/page/page.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
 @import "dev/blocks/popup/popup.scss";
+@import "dev/blocks/prod/prod.scss";
 @import "dev/blocks/prod-grid/prod-grid.scss";
+@import "dev/blocks/prod-tabs/prod-tabs.scss";
+@import "dev/blocks/prod-tabs-content/prod-tabs-content.scss";
 @import "dev/blocks/prod-tiles/prod-tiles.scss";
 @import "dev/blocks/select/select.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
