--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -14,7 +14,53 @@ block pageHeader
 	)
 
 block pageMain
-	a.js-popup(href='#popup-price') Узнать цену
+	.grid
+		.grid__row
+			.grid__col
+				.prod
+					.prod__inner
+						.prod__img
+							img(src='/assets/product-full.png' alt='')
+						.prod__info
+							+back()
+							h2.page__title.prod__title БМВЛ для телят АСТ/105
+							p.page__p.prod__descr витаминно-минеральный коктейль для добавления в цельное молоко
+							.prod__list
+								.prod__list-key Вид:
+								.prod__list-value Порошок желтого цвета легкорастворимый в воде
+								.prod__list-key Упаковка:
+								.prod__list-value Пластиковое ведро 7,5 кг с дозировочной ложкой
+								.prod__list-key Срок годности:
+								.prod__list-value 24 месяца
+							a.prod__button.button.js-popup(href='#popup-price') Узнать цену
+							.prod__file
+								.prod__file-icon
+									svg.svg
+										use(xlink:href='img/svgSprite.svg#icon__pdf_download')
+								.prod__file-inner
+									.prod__file-title Иструкция по применению
+									.prod__file-row
+										a.prod__file-link(href='#', download) Скачать
+										span.prod__file-type (.pdf)
+		.grid__row
+			.grid__col
+				.prod-tabs
+					.prod-tabs__inner
+						.prod-tabs__item.prod-tabs__item_active Описание
+						.prod-tabs__item Способ применения и дозировка
+						.prod-tabs__item Состав
+						.prod-tabs__item Характеристики
+	.prod-tabs-content
+		.grid
+			.grid__row
+				.grid__col
+					.prod-tabs-content__inner
+						.prod-tabs-content__item.prod-tabs-content__item_active
+							p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят. Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
+							// списки, абзацы, выделения
+						.prod-tabs-content__item 2
+						.prod-tabs-content__item 3
+						.prod-tabs-content__item 4
 
 block templates
 	+popup-price
