+ vacancy page + contacts page

--- a/dev/blocks/popup/popup.scss
+++ b/dev/blocks/popup/popup.scss
@@ -8,7 +8,7 @@
 	margin: 0 auto;
 	max-width: 870px;
 	overflow: hidden;
-	padding: 24px 16px 24px;
+	padding: 24px 16px;
 	position: relative;
 	width: calc(100% - 32px);
 	@media (min-width: $screen-sm) {
