--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -14,3 +14,4 @@ include ../blocks/popup/popup.pug
 include ../blocks/prod-grid/prod-grid.pug
 include ../blocks/prod-tiles/prod-tiles.pug
 include ../blocks/subnav/subnav.pug
+include ../blocks/vacancy-tiles/vacancy-tiles.pug
