--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -14,7 +14,9 @@
 @import "dev/blocks/breadcrumbs/breadcrumbs.scss";
 @import "dev/blocks/button/button.scss";
 @import "dev/blocks/checkbox/checkbox.scss";
+@import "dev/blocks/contacts/contacts.scss";
 @import "dev/blocks/drag-drop/drag-drop.scss";
+@import "dev/blocks/feedback/feedback.scss";
 @import "dev/blocks/field/field.scss";
 @import "dev/blocks/footer/footer.scss";
 @import "dev/blocks/footer-contacts/footer-contacts.scss";
@@ -38,6 +40,9 @@
 @import "dev/blocks/sidenav/sidenav.scss";
 @import "dev/blocks/subnav/subnav.scss";
 @import "dev/blocks/textarea/textarea.scss";
+@import "dev/blocks/vacancy/vacancy.scss";
+@import "dev/blocks/vacancy-apply/vacancy-apply.scss";
+@import "dev/blocks/vacancy-tiles/vacancy-tiles.scss";
 
 /*!*
  * ВНИМАНИЕ! Этот файл генерируется автоматически.
