--- a/dev/blocks/form/form.scss
+++ b/dev/blocks/form/form.scss
@@ -17,6 +17,26 @@
 			grid-template-columns: 1fr 1fr;
 		}
 	}
+	.feedback &__grid {
+		display: grid;
+		grid-gap: 32px;
+		grid-template-columns: 1fr;
+		@media (min-width: $screen-md) {
+			grid-gap: 32px;
+			grid-template-areas:
+					'name phone'
+					'mail .'
+					'comment comment';
+			grid-template-columns: 1fr 1fr;
+		}
+		@media (min-width: $screen-lg) {
+			grid-gap: 40px;
+			grid-template-areas:
+					'name phone mail'
+					'comment comment comment';
+			grid-template-columns: 1fr 1fr 1fr;
+		}
+	}
 	@media (min-width: $screen-md) {
 		&__field:nth-child(1) {
 			grid-area: name;
