--- a/dev/blocks/grid/grid.scss
+++ b/dev/blocks/grid/grid.scss
@@ -3,11 +3,17 @@
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
 .grid {
-	@include container();
+	@include container(16px);
 	&__row {
-		@include row();
+		@include row(16px);
 	}
 	&__col {
 		@include col();
+		&_lg_5 {
+			@include col(lg, 5, $grid-columns, 32px);
+		}
+		&_lg_7 {
+			@include col(lg, 7, $grid-columns, 32px);
+		}
 	}
 }
