--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -42,25 +42,43 @@ block pageMain
 									.prod__file-row
 										a.prod__file-link(href='#', download) Скачать
 										span.prod__file-type (.pdf)
-		.grid__row
-			.grid__col
-				.prod-tabs
-					.prod-tabs__inner
-						.prod-tabs__item.prod-tabs__item_active Описание
-						.prod-tabs__item Способ применения и дозировка
-						.prod-tabs__item Состав
-						.prod-tabs__item Характеристики
-	.prod-tabs-content
+	.prod-tabs
 		.grid
 			.grid__row
 				.grid__col
-					.prod-tabs-content__inner
-						.prod-tabs-content__item.prod-tabs-content__item_active
-							p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят. Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
-							// списки, абзацы, выделения
-						.prod-tabs-content__item 2
-						.prod-tabs-content__item 3
-						.prod-tabs-content__item 4
+					.prod-tabs__top
+						.prod-tabs__inner
+							.prod-tabs__item.prod-tabs__item_active Описание
+							.prod-tabs__item Способ применения и дозировка
+							.prod-tabs__item Состав
+							.prod-tabs__item Характеристики
+		.prod-tabs-content
+			.grid
+				.grid__row
+					.grid__col
+						.prod-tabs-content__inner
+							.prod-tabs-content__item.prod-tabs-content__item_active
+								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят. Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
+								// списки, абзацы, выделения
+							.prod-tabs-content__item
+								h3 Заголовок первого уровня
+								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма.
+								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
+								h4 Заголовок второго уровня
+								p Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
+								ul
+									li Пункт номер 1
+									li Пункт номер 2
+									li Снижает риск возникновения диареи у телят.
+								h5 Заголовок третьего уровня
+								ol
+									li Пункт номер 1
+									li Пункт номер 2
+									li Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
+							.prod-tabs-content__item
+								p Состав
+							.prod-tabs-content__item
+								p Характеристики
 
 block templates
 	+popup-price
