--- a/dev/pages/contacts.pug
+++ b/dev/pages/contacts.pug
@@ -34,9 +34,12 @@ block pageMain
 									РТ, г. Казань,<br>
 									ул. Поперечно-Отарская, д. 100
 		.contacts__map
+			.map-marker
+				.map-marker__icon
+					svg.svg
+						use(xlink:href='img/svgSprite.svg#icon__pin')
+				.map-marker__title Мы находимся тут
 			script(type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A733472f83679b409443a0d91b9fc2ea0b9511495cf31624c8ea94810ad0c257b&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true")
-		//
-			Мы находимся тут
 	.grid
 		.grid__row
 			.grid__col
